--- a/style.css
+++ b/style.css
@@ -15,10 +15,32 @@ main {
     align-items: center;
     min-height: 100vh;
 }
+.post{
+
+}
+.post h1{
+
+}
+.post p{
+
+}
+.post-list{
+
+}
+
 
 @media(max-width: 475px) {
     main {
         background-color: red;
+        padding: 10px;
+    }
+    .post{
+        border: solid 0.9px;
+        padding: 5px;
+        margin-bottom: 10px;
+    }
+    .post-list{
+        
     }
 }
 
@@ -37,6 +59,25 @@ main {
         background-color: orange;
         color: navy;
     }
+    
+    .post {
+        border: solid 0.8px;
+        padding: 12px;
+        width: 30vw;
+    }
+
+    .post h1 {
+        font-size: x-large;
+    }
+
+    .post p {}
+
+    .post-list {
+        display: flex;
+        gap: 1vw;
+        width: 80vw;
+        flex-wrap: wrap;
+    }
 }
 
 @media (min-width: 1025px) {
@@ -44,6 +85,22 @@ main {
         font-size: 20px;
         background-color: black;
         color: white;
+    }
+    .post {
+        border: solid 0.8px;
+        padding: 12px;
+    }
+
+    .post h1 {
+        font-size: x-large;
+    }
+
+    .post p {}
+
+    .post-list {
+        display: flex;
+        gap: 1vw;
+        width: 80vw;
     }
 
 }
